# subset_sum_at_home

./: CMakeLists.txt  README  boinc_compile_linux_i686.sh  boinc_compile_linux_x86_64.sh  boinc_compile_osx_i686.sh  boinc_compile_osx_x86_64.sh  subset_sum_main.cpp
client/: CMakeLists.txt  bit_logic.hpp  output.cpp  output.hpp  subset_sum_main.cpp
common/: CMakeLists.txt  big_int.hpp  binary_output.cpp  binary_output.cxx  binary_output.hpp  bit_logic.hpp  generate_subsets.cpp  generate_subsets.hpp  n_choose_k.cpp  n_choose_k.hpp  n_choose_k_cuda.cu  output.cpp  output.hpp  util.hpp
demo/: cl_compile_linux_nvidia.sh  cl_compile_linux_nvidia_bits.sh  cl_compile_ub.sh  cl_compile_ub_bits.sh  int_cpu_demo.cpp  opencl_bit_logic.cl  opencl_bit_logic.cpp  opencl_bit_logic.hpp  opencl_int_logic.cl  opencl_int_logic.hpp  opencl_int_logic.hpp~  subset_sum_main.cpp
php/: index.php  need.php
server/: CMakeLists.txt  Makefile  sss_assimilation_policy.cxx  sss_validation_policy.cpp  sss_validation_policy.cxx  sss_validation_policy_new.cpp  sss_webpage_generator.cxx  sss_work_generator.cpp  sss_work_generator.cxx
webpage/: index.php  need.php  progress.php  update_symlinks.php
webpage/progress/: set_10c5.html  set_10c6.html  set_10c7.html  set_11c5.html  set_11c6.html  set_11c7.html  set_12c6.html  set_12c7.html  set_12c8.html  set_13c6.html  set_13c7.html  set_13c8.html  set_14c7.html  set_14c8.html  set_14c9.html  set_15c7.html  set_15c8.html  set_15c9.html  set_16c10.html  set_16c8.html  set_16c9.html  set_17c10.html  set_17c8.html  set_17c9.html  set_18c10.html  set_18c11.html  set_18c9.html  set_19c10.html  set_19c11.html  set_19c9.html  set_20c10.html  set_20c11.html  set_20c12.html  set_21c10.html  set_21c11.html  set_21c12.html  set_22c11.html  set_22c12.html  set_22c13.html  set_23c11.html  (+70 more)
webpage/templates/: progress.html  subset_sum_info.html
